--- a/client/src/app/pages/home-page/home-page.component.html
+++ b/client/src/app/pages/home-page/home-page.component.html
@@ -10,7 +10,7 @@
 
 	<div class="card-deck">
 
-		<div class="card" style="width: 18rem;">
+		<div class="card">
 		<a href="rate-playlist">
 			<div class="card-body">
 				<h3 class="card-title">RATE</h3>
@@ -19,7 +19,7 @@
 		</a>
 		</div>
 
-		<div class="card" style="width: 18rem;">
+		<div class="card">
 		<a href="build-playlist">
 			<div class="card-body">
 				<h3 class="card-title">BUILD</h3>
@@ -28,7 +28,7 @@
 		</a>
 		</div>
 
-		<div class="card" style="width: 18rem;">
+		<div class="card">
 		<a href="compare">
 			<div class="card-body">
 				<h3 class="card-title">COMPARE</h3>
