--- a/client/src/app/components/navbar/navbar.component.css
+++ b/client/src/app/components/navbar/navbar.component.css
@@ -1,42 +1,240 @@
+/* small screen*/
+@media screen and (max-width: 768px) {
+    #header {
+        display: none;
+    }
+    #mobile-header {
+        width: 100%;
+        height: 80px;
+        display: block;
+        margin-bottom: 10px;
+    }
+    .inner-header {
+        width: 100%;
+        height: 100%;
+        display: block;
+        margin: 0;
+    }
+    .logo-container {
+        display: table;
+        float: left;
+        height: 100%;
+    }
+    .logo-container a {
+        display: table-cell;
+        vertical-align: middle;
+        height: 100%;
+        width: 70px;
+    }
+    .logo-container a img {
+        max-width: 80px;
+        height: auto;
+    }
+    #toggle-icon {
+        display: table;
+        font-size: 30px;
+        float: right;
+        z-index: 2;
+        cursor: pointer;
+        vertical-align: middle;
+        padding-top: 15px;
+    }
+    .fa-bars {
+        font-size: 30px;
+        vertical-align: middle;
+        float: right;
+    }
+    #close-icon {
+        cursor: pointer; 
+        font-size: 30px;
+        padding-right: 20px;
+        padding-top: 10px;
+    }
+    #overlay {
+        position: fixed;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background: white;
+        opacity: 0.95;
+        z-index: 1;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
 
-nav {
-    padding-bottom: 50px;
-    padding-top: 20px;
-}
-ul {
-    padding: 0;
-    list-style-type: none;
-}
-.nav-container {
-    display: flex;
-    flex-direction: row; 
-}
-.nav-logo {
-    display: flex;
-    justify-content: center;
-}
-
-.menu-left {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    justify-content: flex-start;
-    align-items: center;
-}
-.menu-left li:not(:last-child) {
-    padding-right: 50px;
-}
-.menu-right {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    justify-content: flex-end;
-    align-items: center;
-}
-.menu-right li {
-    padding-left: 50px;
+    }
+    .navmenu-overlay {
+        top: 25%;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        transition: 0.5s;
+        z-index: 2;
+        width: 100%;
+        flex-grow: 4;
+    }
+    .navmenu-overlay ul {
+        position: relative;
+        padding-left: 5;
+    }
+    .navmenu-overlay ul li {
+        position: relative;
+        list-style: none;
+        text-align: end;
+        display: block;
+        padding: 10px;
+    }
+    .navmenu-overlay ul li a {
+        position: relative;
+        text-decoration: none;
+        color: black;
+        font-size: 30px;
+    }
 }
 
-.user-icon {
-    border-radius: 50%;
+/* medium screen*/
+@media screen and (min-width: 768px) and (max-width: 1080px) {
+    #header {
+        display: none;
+    }
+    #mobile-header {
+        width: 100%;
+        height: 80px;
+        display: block;
+        margin-bottom: 50px;
+    }
+    .inner-header {
+        width: 100%;
+        height: 100%;
+        display: block;
+        margin: 0;
+    }
+    .logo-container {
+        display: table;
+        float: left;
+        height: 100%;
+    }
+    .logo-container a {
+        display: table-cell;
+        vertical-align: middle;
+        height: 100%;
+    }
+    .logo-container a img {
+        max-width: 120px;
+        height: auto;
+    }
+    #toggle-icon {
+        display: table;
+        font-size: 30px;
+        float: right;
+        z-index: 2;
+        cursor: pointer;
+        vertical-align: middle;
+        padding-top: 15px;
+    }
+    .fa-bars {
+        font-size: 30px;
+        vertical-align: middle;
+        float: right;
+    }
+    #close-icon {
+        cursor: pointer; 
+        font-size: 30px;
+        padding-top: 10px;
+        padding-right: 20px;
+    }
+    #overlay {
+        position: fixed;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background: white;
+        opacity: 0.95;
+        z-index: 1;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+    }
+    .navmenu-overlay {
+        top: 25%;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        transition: 0.5s;
+        z-index: 2;
+        width: 100%;
+        flex-grow: 4;
+    }
+    .navmenu-overlay ul {
+        position: relative;
+        padding-left: 5;
+    }
+    .navmenu-overlay ul li {
+        position: relative;
+        list-style: none;
+        text-align: end;
+        display: block;
+        padding: 10px;
+    }
+    .navmenu-overlay ul li a {
+        position: relative;
+        text-decoration: none;
+        color: black;
+        font-size: 30px;
+    }
+}
+
+/* big screen*/
+@media screen and (min-width: 1080px) {
+    #mobile-header {
+        display: none;
+    }
+    nav {
+        padding-bottom: 50px;
+        padding-top: 20px;
+    }
+    ul {
+        padding: 0;
+        list-style-type: none;
+    }
+    .nav-container {
+        display: flex;
+        flex-direction: row; 
+    }
+    .nav-logo {
+        display: flex;
+        justify-content: center;
+    }
+
+    .menu-left {
+        display: flex;
+        flex-direction: row;
+        flex: 1;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    .menu-left li:not(:last-child) {
+        padding-right: 50px;
+    }
+    .menu-right {
+        display: flex;
+        flex-direction: row;
+        flex: 1;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    .menu-right li {
+        padding-left: 50px;
+    }
+
+    .user-icon {
+        border-radius: 50%;
+    }
 }
