--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,49 +1,155 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-	background-color: white;
-	font-family: 'Poppins';
-	margin-left: 70px;
-    margin-right: 70px;
+
+html {
+	overflow-x: hidden;
 }
 
-h1 {
-	font-weight: bold;
-	font-size: 50px;
-}
+@media screen and (max-width: 768px) {
+    body {
+		margin: 20px;
+		overflow-x: hidden;
+	}
+	h1 {
+		font-weight: bold;
+		font-size: 40px;
+	}
+	h2 {
+		font-size: 25px;
+		font-weight: 500;
+		line-height: 0.5;
+	}
+	h3 {
+		font-weight: 700;
+	}
 
-h2, h3 {
-	font-weight: 700;
-}
+	h4 {
+		font-size: 16px;
+		font-weight: 500;
 
-h4 {
-	font-size: 16px;
-	font-weight: 500;
+	}
 
-}
+	h5, p {
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 1.0;
+	}
+	button, .btn {
+		background-color: #ee9480;
+		border-radius: 5px;
+		border: none;
+		color: white;
+		padding: 3px 7px;
+		
+	}
 
-h5 {
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 1.0;
-}
-
-button, .btn {
-	background-color: #ee9480;
-	border-radius: 5px;
-	border: none;
-	color: white;
-	padding: 3px 7px;
+	button:hover, .btn:hover {
+		background-color: #F47458;
+		color: white;
+	}
+	a {
+		color: black;
+	}
+	a:hover {
+		color: #F47458;
+	}
 	
 }
 
-button:hover, .btn:hover {
-	background-color: #F47458;
-	color: white;
+@media screen and (min-width: 768px) and (max-width: 1080px) { 
+	body {
+		margin: 20px;
+		overflow-x: hidden;
+	}
+	h1 {
+		font-weight: bold;
+		font-size: 50px;
+		line-height: 1.0;
+	}
+
+	h2, h3 {
+		font-weight: 700;
+	}
+
+	h4 {
+		font-size: 16px;
+		font-weight: 500;
+
+	}
+
+	h5, p {
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 1.0;
+	}
+	button, .btn {
+		background-color: #ee9480;
+		border-radius: 5px;
+		border: none;
+		color: white;
+		padding: 3px 7px;
+		
+	}
+
+	button:hover, .btn:hover {
+		background-color: #F47458;
+		color: white;
+	}
+	a {
+		color: black;
+	}
+	a:hover {
+		color: #F47458;
+	}
 }
 
-a {
-	color: black;
-}
-a:hover {
-	color: #F47458;
+@media screen and (min-width: 1080px) {
+	body {
+		background-color: white;
+		overflow-x: hidden;
+		font-family: 'Poppins';
+		margin-left: 70px;
+		margin-right: 70px;
+	}
+
+	h1 {
+		font-weight: bold;
+		font-size: 50px;
+	}
+
+	h2, h3 {
+		font-weight: 700;
+	}
+
+	h4 {
+		font-size: 16px;
+		font-weight: 500;
+
+	}
+
+	h5, p {
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 1.0;
+	}
+
+	button, .btn {
+		background-color: #ee9480;
+		border-radius: 5px;
+		border: none;
+		color: white;
+		padding: 3px 7px;
+		
+	}
+
+	button:hover, .btn:hover {
+		background-color: #F47458;
+		color: white;
+	}
+
+	a {
+		color: black;
+	}
+	a:hover {
+		color: #F47458;
+	}
 }
