--- a/client/src/app/pages/home-page/home-page.component.html
+++ b/client/src/app/pages/home-page/home-page.component.html
@@ -3,7 +3,7 @@
 	<div class="hero-intro">
 		<div class="hero-text">
 			<h1>Understand Your Playlists Better</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			<p>Music is the window to the soul. Our state of the art vibe-rater will tell you which songs fit a sad, calm, energetic, or happy mood!</p>
 		</div>
 		<img src="/assets/home-intro.svg" width="900">
 	</div>
