--- a/client/src/app/pages/build-playlist/build-playlist.component.css
+++ b/client/src/app/pages/build-playlist/build-playlist.component.css
@@ -1,3 +1,59 @@
-.row {
-    padding-bottom: 10px;
+@media screen and (max-width: 575px) {
+    .col-sm-3 {
+        padding-bottom: 5px;
+    }
+    .gen-playlist {
+        margin-top: 20px;
+    }
+    .list-group-item img {
+        max-width: 40px;
+        height: auto;
+    }
+}
+@media screen and (min-width: 575px) and (max-width: 768px) {
+    .row {
+        padding-bottom: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+    .col-sm-3 {
+        max-width: 100%;
+        padding-bottom: 5px;
+    }
+    .gen-playlist {
+        margin-top: 20px;
+    }
+    .list-group-item img {
+        max-width: 40px;
+        height: auto;
+    }
+    h4 {
+        word-wrap: break-word;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1080px) {
+    .row {
+        padding-bottom: 10px;
+    }
+    .gen-playlist {
+        margin-top: 30px;
+    }
+    .list-group-item img {
+        max-width: 40px;
+        height: auto;
+    }
+}
+
+@media screen and (min-width: 1080px) {
+    .row {
+        padding-bottom: 10px;
+    }
+    .gen-playlist {
+        margin-top: 30px;
+    }
+    .list-group-item img {
+        max-width: 60px;
+        height: auto;
+    }
 }
