--- a/client/src/app/pages/sign-in-page/sign-in-page.component.html
+++ b/client/src/app/pages/sign-in-page/sign-in-page.component.html
@@ -1,5 +1,7 @@
 <title>Vibe-Rater</title>
 <body>
-    <h1>Vibe-Rater</h1>
-    <a class="btn btn-light" role="button" href="http://localhost:8888/login">Log in</a>
+    <div class="container">
+        <h1>Vibe-Rater</h1>
+        <a class="btn btn-light" role="button" href="http://localhost:8888/login">Log in</a>
+    </div>
 </body>
